# tinspect

./: .gitignore  Cargo.toml  README.md
examples/: tinspect-logging-proxy.rs
src/: inspect.rs  lib.rs  packet.rs
src/dns/: mod.rs
src/tproxy/: context.rs  http.rs  mod.rs  net.rs  server.rs  tls.rs  transport.rs  ws.rs
