[package]
name = "tinspect"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1", features = ["full", "http1", "http2"] }
hyper-util = { version = "0.1.18", features = ["full"] }
libc = "0.2.178"
sha1 = "0.10.6"
socket2 = "0.6.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28.0"
