[package]
name = "tinspect"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
dashmap = "6.1.0"
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1", features = ["full", "http1", "http2"] }
hyper-rustls = "0.27.7"
hyper-util = { version = "0.1.18", features = ["full"] }
libc = "0.2.178"
rcgen = { version = "0.14.5", default-features = false, features = ["crypto", "aws_lc_rs", "pem", "x509-parser"] }
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
sha1 = "0.10.6"
socket2 = "0.6.1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-tungstenite = "0.28.0"
tracing = "0.1.43"
webpki-roots = "1.0.4"
