[package]
name = "tinspect"
version = "0.1.0"
edition = "2024"

authors = ["metastable-void"]
description = "Transparent HTTP(S)/WebSocket MITM inspection proxy lib."
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/tinspect"
homepage = "https://github.com/metastable-void/tinspect"

[dependencies]
base64 = "0.22.1"
bytes = "1.7.1"
futures-util = "0.3.31"
hickory-proto = "0.25.2"
hickory-resolver = "0.25.2"
http-body-util = "0.1.3"
hyper = { version = "1", features = ["full", "http1", "http2"] }
hyper-util = { version = "0.1.19", features = ["full"] }
lru = "0.16.2"
libc = "0.2.178"
h2 = "0.4"
rcgen = { version = "0.14.5", default-features = false, features = ["crypto", "aws_lc_rs", "pem", "x509-parser"] }
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
sha1 = "0.10.6"
socket2 = "0.6.1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.43"
webpki-roots = "1.0.4"
pin-project-lite = "0.2.14"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
hex = "0.4"
